feat: channel create and channel join

--- a/fablo-target/fabric-k8/.env
+++ b/fablo-target/fabric-k8/.env
@@ -14,6 +14,8 @@ MSP_ORD=OrdererMSP
 ORG1_CA_ADMIN_NAME=enroll
 ORG1_CA_ADMIN_PASSWORD=enrollpw
 
+USER_CA_TYPE=tlsca # or ca
+
 ADMIN_USER=admin
 ADMIN_PASS=enrollpw
 
@@ -25,7 +27,7 @@ ORDERER_IMAGE=hyperledger/fabric-orderer
 ORDERER_VERSION=2.4.3
 ORDERER_SECRET=ordererpw
 
-# CHANNEL=my-channel1
+CHANNEL_NAME=my-channel1
 # CHAINCODE_NAME=chaincode1
 # CHAINCODE_LABEL=chaincode1
 
