--- a/fablo-target/fabric-k8/.env
+++ b/fablo-target/fabric-k8/.env
@@ -28,10 +28,14 @@ ORDERER_VERSION=2.4.3
 ORDERER_SECRET=ordererpw
 
 CHANNEL_NAME=my-channel1
-# CHAINCODE_NAME=chaincode1
-# CHAINCODE_LABEL=chaincode1
 
 STORAGE_CLASS=$(kubectl describe sc | grep Name | tr -s ' ' | cut -d ':' -f 2 | cut -d ' ' -f 2)
+
+CHAINCODE_NAME=chaincode1
+CHAINCODE_LANG=node
+CHAINCODE_VERSION=1.0
+CHAINCODES_BASE_DIR=/home/great/work/fablo
+SEQUENCE=1 #default
 
 
 # 
