--- a/src/setup-k8s/templates/fabric-k8s/.env
+++ b/src/setup-k8s/templates/fabric-k8s/.env
@@ -34,13 +34,11 @@ STORAGE_CLASS=$(kubectl describe sc | grep Name | tr -s ' ' | cut -d ':' -f 2 | 
 CHAINCODE_NAME=chaincode1
 CHAINCODE_LANG=node
 CHAINCODE_VERSION=1.0
-CHAINCODES_BASE_DIR=/home/great/work/fablo
+CHAINCODES_BASE_DIR=<%= paths.chaincodesBaseDir %>
 SEQUENCE=1 #default
 
 
-# 
-# 
-# kubectl wait --timeout=180s --for=condition=Running fabriccas.hlf.kungfusoftware.es --all
+
 
 
 
